--- a/index.html
+++ b/index.html
@@ -12,12 +12,15 @@
         <input type="checkbox" id="soundToggle" name="soundToggle" value="Toggle">
         <label for="soundToggle"> Turn on the sound please</label>
         <br>  
-        <button type="button" onclick=>GUH HUH</button>
+        <button type="button" onclick="soundPlayGuhHuh()">GUH HUH</button>
         <br>
-        <button type="button" onclick="soundPlay()">A</button> 
-        <button type="button">B</button> 
-        <button type="button">C</button>
-        <button type="button">D</button>
+        <button type="button" onclick="soundPlayA()">A</button> 
+        <button type="button" onclick="soundPlayB()">B</button> 
+        <button type="button" onclick="soundPlayC()">C</button>
+        <button type="button" onclick="soundPlayD()">D</button>
+        <button type="button" onclick="soundPlayE()">E</button>
+        <button type="button" onclick="soundPlayF()">F</button>
+        <button type="button" onclick="soundPlayG()">G</button>
     </body>
 </html>
    
