--- a/index.html
+++ b/index.html
@@ -4,23 +4,27 @@
         <link rel="stylesheet" href="indexStyles.css">
     </head> 
     <div class="header">
-    <h1 class ="intro">Tip-Tap, Music on the Go or is it</h1>
+    <h1 class ="intro">Tip-Tap, Music on the Go </h1>
     </div>    
     <body>
-        <h1 class = "intro">Welcome to the portable mini-keyboard on the go</h1>
+        <script src="index.js"></script>
+        <h1 class = "intro">Welcome to the portable mini-keyboard on the go lol</h1>
         <br>
+        
         <input type="checkbox" id="soundToggle" name="soundToggle" value="Toggle">
         <label for="soundToggle"> Turn on the sound please</label>
         <br>  
-        <button type="button" onclick="soundPlayGuhHuh()">GUH HUH</button>
+        <button onclick='soundPlayGuhHuh();'>GUH HUH</button>
         <br>
-        <button type="button" onclick="soundPlayA()">A</button> 
-        <button type="button" onclick="soundPlayB()">B</button> 
-        <button type="button" onclick="soundPlayC()">C</button>
-        <button type="button" onclick="soundPlayD()">D</button>
-        <button type="button" onclick="soundPlayE()">E</button>
-        <button type="button" onclick="soundPlayF()">F</button>
-        <button type="button" onclick="soundPlayG()">G</button>
+        <br>
+        <br>
+        <button onclick="soundPlayA();">A</button> 
+        <button onclick="soundPlayB();">B</button> 
+        <button onclick="soundPlayC();">C</button>
+        <button onclick="soundPlayD();">D</button>
+        <button onclick="soundPlayE();">E</button>
+        <button onclick="soundPlayF();">F</button>
+        <button onclick="soundPlayG();">G</button>
     </body>
 </html>
    
