--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
         <link rel="stylesheet" href="indexStyles.css">
     </head> 
     <div class="header">
-    <h1 class ="intro">Tip-Tap, Music on the Go </h1>
+    <h1 class ="intro">Tip-Tap, Music on the Go hi</h1>
     </div>    
     <body>
         <script src="index.js"></script>
-        <h1 class = "intro">Welcome to the portable mini-keyboard on the go lol</h1>
+        <h1 class = "intro">Welcome to the portable mini-keyboard on the go for computers</h1>
         <br>
-        
         <input type="checkbox" id="soundToggle" name="soundToggle" value="Toggle">
         <label for="soundToggle"> Turn on the sound please</label>
         <br>  
-        <button onclick='soundPlayGuhHuh();'>GUH HUH</button>
         <br>
         <br>
         <br>
@@ -25,6 +23,17 @@
         <button onclick="soundPlayE();">E</button>
         <button onclick="soundPlayF();">F</button>
         <button onclick="soundPlayG();">G</button>
+        <br>
+        <br>
+        <br>
+        <h1>special sound times</h1>
+        <button onclick='soundPlayGuhHuh();'>GUH HUH</button>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <a href="audioSourceCiting.html">Here's where we got the audio clips!</a>
     </body>
 </html>
    
